# invenio-stats

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  Documentation.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  babel.ini  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/actions/pre-install/: action.yml
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  examplesapp.rst  index.rst  installation.rst  operations.rst  overview.rst  usage.rst
examples/: app-setup.sh  app-teardown.sh  app.py
invenio_stats/: __init__.py  aggregations.py  bookmark.py  cli.py  config.py  errors.py  ext.py  indexer.py  manager.py  processors.py  proxies.py  queries.py  queue.py  queues.py  receivers.py  tasks.py  templates.py  utils.py  version.py  views.py
invenio_stats/contrib/: __init__.py  config.py  event_builders.py  events.py  queries.py  receivers.py  registrations.py
invenio_stats/contrib/aggregations/: __init__.py  aggr-record-view-v1.json  monthly_file_downloads_v1.json
invenio_stats/contrib/aggregations/aggr-file-download/: aggr-file-download-v1.json
invenio_stats/contrib/aggregations/aggr-record-view/: aggr-record-view-v1.json
invenio_stats/contrib/aggregations/aggr_bookmark/: __init__.py
invenio_stats/contrib/aggregations/aggr_bookmark/v5/: aggr-bookmark-v1.json
invenio_stats/contrib/aggregations/aggr_file_download/: __init__.py
invenio_stats/contrib/aggregations/aggr_file_download/os-v1/: __init__.py  aggr-file-download-v1.json
invenio_stats/contrib/aggregations/aggr_file_download/v2/: aggr-file-download-v1.json
invenio_stats/contrib/aggregations/aggr_file_download/v5/: aggr-file-download-v1.json
invenio_stats/contrib/aggregations/aggr_file_download/v6/: aggr-file-download-v1.json
invenio_stats/contrib/aggregations/aggr_file_download/v7/: __init__.py  aggr-file-download-v1.json
invenio_stats/contrib/aggregations/aggr_record_view/: __init__.py
invenio_stats/contrib/aggregations/aggr_record_view/os-v2/: __init__.py  aggr-record-view-v1.json
invenio_stats/contrib/aggregations/aggr_record_view/v2/: aggr-record-view-v1.json
invenio_stats/contrib/aggregations/aggr_record_view/v5/: aggr-record-view-v1.json
invenio_stats/contrib/aggregations/aggr_record_view/v6/: aggr-record-view-v1.json
invenio_stats/contrib/aggregations/aggr_record_view/v7/: __init__.py  aggr-record-view-v1.json
invenio_stats/contrib/file-download/: file-download-v1.json
invenio_stats/contrib/file_download/: __init__.py  file_download_v1.json
invenio_stats/contrib/file_download/os-v1/: __init__.py  file-download-v1.json
invenio_stats/contrib/file_download/os-v2/: file-download-v1.json
invenio_stats/contrib/file_download/v2/: file-download-v1.json
invenio_stats/contrib/file_download/v5/: file-download-v1.json
invenio_stats/contrib/file_download/v6/: file-download-v1.json
invenio_stats/contrib/file_download/v7/: __init__.py  file-download-v1.json
invenio_stats/contrib/record-view/: record-view-v1.json
invenio_stats/contrib/record_view/: __init__.py  record_view_v1.json
invenio_stats/contrib/record_view/os-v1/: record-view-v1.json
invenio_stats/contrib/record_view/os-v2/: __init__.py  record-view-v1.json
invenio_stats/contrib/record_view/v2/: record-view-v1.json
invenio_stats/contrib/record_view/v5/: record-view-v1.json
invenio_stats/contrib/record_view/v6/: record-view-v1.json
invenio_stats/contrib/record_view/v7/: __init__.py  record-view-v1.json
invenio_stats/estemplates/: recordview.json
invenio_stats/estemplates/stats/: __init__.py
invenio_stats/estemplates/stats/file_download/: file_download_v1.json
invenio_stats/translations/: messages.pot
invenio_stats/translations/ar/LC_MESSAGES/: messages.po
invenio_stats/translations/bg/LC_MESSAGES/: messages.po
invenio_stats/translations/ca/LC_MESSAGES/: messages.po
invenio_stats/translations/cs/LC_MESSAGES/: messages.po
invenio_stats/translations/da/LC_MESSAGES/: messages.po
invenio_stats/translations/de/LC_MESSAGES/: messages.po
invenio_stats/translations/el/LC_MESSAGES/: messages.po
invenio_stats/translations/en/LC_MESSAGES/: messages.po
invenio_stats/translations/es/LC_MESSAGES/: messages.po
invenio_stats/translations/et/LC_MESSAGES/: messages.po
invenio_stats/translations/fa/LC_MESSAGES/: messages.po
invenio_stats/translations/fr/LC_MESSAGES/: messages.po
invenio_stats/translations/hr/LC_MESSAGES/: messages.po
invenio_stats/translations/hu/LC_MESSAGES/: messages.po
invenio_stats/translations/it/LC_MESSAGES/: messages.po
invenio_stats/translations/ja/LC_MESSAGES/: messages.po
invenio_stats/translations/ka/LC_MESSAGES/: messages.po
invenio_stats/translations/ko/LC_MESSAGES/: messages.po
invenio_stats/translations/lt/LC_MESSAGES/: messages.po
invenio_stats/translations/no/LC_MESSAGES/: messages.po
invenio_stats/translations/pl/LC_MESSAGES/: messages.po
invenio_stats/translations/pt/LC_MESSAGES/: messages.po
invenio_stats/translations/ro/LC_MESSAGES/: messages.po
invenio_stats/translations/ru/LC_MESSAGES/: messages.po
invenio_stats/translations/sk/LC_MESSAGES/: messages.po
invenio_stats/translations/sv/LC_MESSAGES/: messages.po
invenio_stats/translations/tr/LC_MESSAGES/: messages.po
invenio_stats/translations/uk/LC_MESSAGES/: messages.po
invenio_stats/translations/zh_CN/LC_MESSAGES/: messages.po
invenio_stats/translations/zh_TW/LC_MESSAGES/: messages.po
tests/: conftest.py  helpers.py  test_aggregations.py  test_cli.py  test_events.py  test_invenio_stats.py  test_prefixing.py  test_processors.py  test_queries.py  test_queue.py  test_receivers.py  test_tasks.py  test_utils.py  test_views.py
tests/contrib/: test_event_builders.py  test_receivers.py
