# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2017-2018 CERN.
# Copyright (C) 2022      TU Wien.
# Copyright (C) 2024 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-stats
version = attr: invenio_stats.__version__
description = Invenio module for collecting statistics.
long_description = file: README.rst, CHANGES.rst
keywords = invenio statistics
license = MIT
author = CERN
author_email = info@invenio-software.org
platforms = any
url = https://github.com/inveniosoftware/invenio-stats
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
zip_safe = False
install_requires =
    counter-robots>=2018.6
    invenio-base>=2.0.0,<3.0.0
    invenio-cache>=2.0.0,<3.0.0
    invenio-celery>=2.0.0,<3.0.0
    invenio-queues>=1.0.0a2
    maxminddb-geolite2>=2018.703
    python-dateutil>=2.7.0
    python-geoip>=1.2

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    invenio-accounts>=6.0.0,<7.0.0
    invenio-app>=2.0.0,<3.0.0
    invenio-db>=2.0.0,<3.0.0
    invenio-files-rest>=3.0.0,<4.0.0
    invenio-oauth2server>=3.0.0,<4.0.0
    invenio-records>=3.0.0,<4.0.0
    invenio-records-ui>=2.0.0,<3.0.0
    pytest-invenio>=3.0.0,<4.0.0
    Sphinx>=5,<6
elasticsearch7 =
    invenio-search[elasticsearch7]>=3.0.0,<4.0.0
opensearch1 =
    invenio-search[opensearch1]>=3.0.0,<4.0.0
opensearch2 =
    invenio-search[opensearch2]>=3.0.0,<4.0.0
# Kept for backwards compatibility
docs =

[options.entry_points]
flask.commands =
    stats = invenio_stats.cli:stats
invenio_base.apps =
    invenio_stats = invenio_stats:InvenioStats
invenio_base.api_apps =
    invenio_stats = invenio_stats:InvenioStats
invenio_celery.tasks =
    invenio_stats = invenio_stats.tasks
invenio_base.api_blueprints =
    invenio_stats = invenio_stats.views:blueprint
invenio_search.templates =
    invenio_stats = invenio_stats.templates:register_templates
invenio_search.index_templates =
    invenio_stats = invenio_stats.templates:register_index_templates
invenio_queues.queues =
    invenio_stats = invenio_stats.queues:declare_queues

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_stats --cov-report=term-missing
filterwarnings = ignore::pytest.PytestDeprecationWarning
testpaths = tests invenio_stats
